--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <h1 class="navbar navbar-light" style="background-color: #e3f2fd;">Миссия Колонизация Марса</h1>
-        <h4>И на Марсе будут яблони цвести!</h4>
+        <h4 class="text-secondary">И на Марсе будут яблони цвести!</h4>
         {% block content %}{% endblock %}
     </body>
 </html>
